Modified start offsets for core and thread nodes.

--- a/81E00612.4E0100.dts
+++ b/81E00612.4E0100.dts
@@ -50,7 +50,7 @@ NEST_MCS: nest-mcs-events {
 		events-prefix = "PM_MCS0_";
 		unit = "MiB";
 		scale = "1.2207e-4";
-		reg = <0x280 0x8>;
+		reg = <0x118 0x8>;
 		events = < &NEST_MCS >;
 	};
 	mcs1 {
@@ -58,7 +58,7 @@ NEST_MCS: nest-mcs-events {
 		events-prefix = "PM_MCS1_";
 		unit = "MiB";
 		scale = "1.2207e-4";
-		reg = <0x408 0x8>;
+		reg = <0x198 0x8>;
 		events = < &NEST_MCS >;
 	};
 	mcs2 {
@@ -66,7 +66,7 @@ NEST_MCS: nest-mcs-events {
 		events-prefix = "PM_MCS2_";
 		unit = "MiB";
 		scale = "1.2207e-4";
-		reg = <0x536 0x8>;
+		reg = <0x218 0x8>;
 		events = < &NEST_MCS >;
 	};
 	mcs3 {
@@ -74,7 +74,7 @@ NEST_MCS: nest-mcs-events {
 		events-prefix = "PM_MCS3_";
 		unit = "MiB";
 		scale = "1.2207e-4";
-		reg = <0x664 0x8>;
+		reg = <0x298 0x8>;
 		events = < &NEST_MCS >;
 	};
 NEST_POWERBUS: nest-powerbus-events {
@@ -125,7 +125,7 @@ NEST_POWERBUS: nest-powerbus-events {
 	powerbus0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_PB_";
-		reg = <0x24 0x8>;
+		reg = <0x18 0x8>;
 		events = < &NEST_POWERBUS >;
 	};
 NEST_XLINK: nest-xlink-events {
@@ -176,25 +176,25 @@ NEST_XLINK: nest-xlink-events {
 	xlink0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_XLINK0_";
-		reg = <0x1304 0x8>;
+		reg = <0x518 0x8>;
 		events = < &NEST_XLINK >;
 	};
 	xlink1 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_XLINK1_";
-		reg = <0x1432 0x8>;
+		reg = <0x598 0x8>;
 		events = < &NEST_XLINK >;
 	};
 	xlink2 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_XLINK2_";
-		reg = <0x1560 0x8>;
+		reg = <0x618 0x8>;
 		events = < &NEST_XLINK >;
 	};
 	xlink3 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_XLINK3_";
-		reg = <0x1688 0x8>;
+		reg = <0x698 0x8>;
 		events = < &NEST_XLINK >;
 	};
 NEST_PHB: nest-phb-events {
@@ -225,19 +225,19 @@ NEST_PHB: nest-phb-events {
 	phb0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_PHB0_";
-		reg = <0x2072 0x8>;
+		reg = <0x818 0x8>;
 		events = < &NEST_PHB >;
 	};
 	phb1 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_PHB1_";
-		reg = <0x2200 0x8>;
+		reg = <0x898 0x8>;
 		events = < &NEST_PHB >;
 	};
 	phb2 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_PHB2_";
-		reg = <0x2328 0x8>;
+		reg = <0x918 0x8>;
 		events = < &NEST_PHB >;
 	};
 NEST_MBA: nest-mba-events {
@@ -278,25 +278,25 @@ NEST_MBA: nest-mba-events {
 	mba0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_MBA0_";
-		reg = <0x792 0x8>;
+		reg = <0x318 0x8>;
 		events = < &NEST_MBA >;
 	};
 	mba1 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_MBA1_";
-		reg = <0x920 0x8>;
+		reg = <0x398 0x8>;
 		events = < &NEST_MBA >;
 	};
 	mba2 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_MBA2_";
-		reg = <0x1048 0x8>;
+		reg = <0x418 0x8>;
 		events = < &NEST_MBA >;
 	};
 	mba3 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_MBA3_";
-		reg = <0x1176 0x8>;
+		reg = <0x498 0x8>;
 		events = < &NEST_MBA >;
 	};
 NEST_MCD: nest-mcd-events {
@@ -327,13 +327,13 @@ NEST_MCD: nest-mcd-events {
 	mcd0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_MCD0_";
-		reg = <0x1816 0x8>;
+		reg = <0x718 0x8>;
 		events = < &NEST_MCD >;
 	};
 	mcd1 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_MCD1_";
-		reg = <0x1944 0x8>;
+		reg = <0x798 0x8>;
 		events = < &NEST_MCD >;
 	};
 NEST_CAPP: nest-capp-events {
@@ -384,7 +384,7 @@ NEST_CAPP: nest-capp-events {
 	capp0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_CAPP_";
-		reg = <0x2456 0x8>;
+		reg = <0x998 0x8>;
 		events = < &NEST_CAPP >;
 	};
 NEST_NVLINK: nest-nvlink-events {
@@ -615,7 +615,7 @@ NEST_NVLINK: nest-nvlink-events {
 	nvlink0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_NPU_";
-		reg = <0x2584 0x8>;
+		reg = <0xa18 0x8>;
 		events = < &NEST_NVLINK >;
 	};
 NEST_NX: nest-nx-events {
@@ -666,7 +666,7 @@ NEST_NX: nest-nx-events {
 	nx0 {
 		compatible = "ibm,imc-counters-nest";
 		events-prefix = "PM_NX_";
-		reg = <0x3352 0x8>;
+		reg = <0xd18 0x8>;
 		events = < &NEST_NX >;
 	};
 CORE_THREAD: core-thread-events {
@@ -1923,14 +1923,14 @@ CORE_THREAD: core-thread-events {
 		compatible = "ibm,imc-counters-core";
 		events-prefix = "CPM_";
 		scale = "128";
-		reg = <0x224 0x8>;
+		reg = <0x18 0x8>;
 		events = < &CORE_THREAD >;
 	};
 	thread {
 		compatible = "ibm,imc-counters-thread";
 		events-prefix = "CPM_";
 		scale = "128";
-		reg = <0x224 0x8>;
+		reg = <0x18 0x8>;
 		events = < &CORE_THREAD >;
 	};
 };
