--- a/81E00612.4E0200.dts
+++ b/81E00612.4E0200.dts
@@ -6,7 +6,7 @@
         compatible = "ibm,opal-in-memory-counters";
         #address-cells = <0x1>;
         #size-cells = <0x1>;
-        version-id = <0xd>;
+        version-id = <0xe>;
 
 NEST_MCS: nest-mcs-events {
                 #address-cells = <0x1>;
@@ -1290,32 +1290,32 @@ CORE_THREAD: core-thread-events {
 			desc = "The number of processor cycles in privileged mode with MSR HV=0 & PR=0" ;
 		};
 		event@e08 {
-			event-name = "CS_" ;
+			event-name = "CS_ST_FIN" ;
 			reg = <0xe08 0x8>;
 			desc = "The number of all store instructions finished" ;
 		};
 		event@1dc8 {
-			event-name = "CS_" ;
+			event-name = "CS_ST_FIN_KERNEL" ;
 			reg = <0x1dc8 0x8>;
 			desc = "The number of all store instructions finished in kernel state" ;
 		};
 		event@1608 {
-			event-name = "CS_" ;
+			event-name = "CS_ST_FIN_USER" ;
 			reg = <0x1608 0x8>;
 			desc = "The number of all store instructions finished in user state" ;
 		};
 		event@c80 {
-			event-name = "CS_" ;
+			event-name = "CS_MISS_L1_LDATA" ;
 			reg = <0xc80 0x8>;
 			desc = "The number of level 1 data misses" ;
 		};
 		event@1c80 {
-			event-name = "CS_" ;
+			event-name = "CS_MISS_L1_LDATA_KERNEL" ;
 			reg = <0x1c80 0x8>;
 			desc = "The number of level 1 data misses in kernel state" ;
 		};
 		event@1480 {
-			event-name = "CS_" ;
+			event-name = "CS_MISS_L1_LDATA_USER" ;
 			reg = <0x1480 0x8>;
 			desc = "The number of level 1 data misses in user state" ;
 		};
@@ -1678,5 +1678,4 @@ CORE_THREAD: core-thread-events {
 		type = <0x1>;
 		size = <0x2000>;
 	};
-
 };
